--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "md5-hex": "^1.0.2",
     "mkdirp": "^0.5.1",
     "promise-map-series": "^0.2.1",
+    "rimraf": "^2.4.3",
     "rsvp": "^3.0.18",
     "symlink-or-copy": "^1.0.1",
     "walk-sync": "^0.2.2"
