--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "minimatch": "^2.0.8",
     "mocha": "^2.2.5",
     "rimraf": "^2.4.2",
-    "sinon": "^1.15.3"
+    "sinon": "^1.15.3",
+    "sinon-chai": "^2.8.0"
   }
 }
