Add JSHint to tests, fix existing syntax issues

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "istanbul": "^0.4.2",
     "minimatch": "^3.0.0",
     "mocha": "^2.2.5",
+    "mocha-jshint": "^2.3.1",
     "rimraf": "^2.4.2",
     "sinon": "^1.15.3",
     "sinon-chai": "^2.8.0"
