--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: node_js
 node_js:
-  - '0.10'
-  - '0.12'
-  - 'iojs'
+   - "0.10"
+  - "0.12"
+  - "4"
+  - "5"
+  - node
 
 install:
   - time npm install
