--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "debug": "^2.2.0",
     "fs-tree-diff": "^0.5.0",
     "hash-for-dep": "^1.0.2",
+    "heimdalljs": "^0.1.0",
+    "heimdalljs-logger": "^0.1.6",
     "md5-hex": "^1.0.2",
     "mkdirp": "^0.5.1",
     "promise-map-series": "^0.2.1",
