--- a/package.json
+++ b/package.json
@@ -42,21 +42,23 @@
     "md5-hex": "^1.0.2",
     "mkdirp": "^0.5.1",
     "promise-map-series": "^0.2.1",
+    "rimraf": "^2.6.1",
     "rsvp": "^3.0.18",
     "symlink-or-copy": "^1.0.1",
     "walk-sync": "^0.3.1"
   },
   "devDependencies": {
     "broccoli-test-helpers": "^0.0.9",
+    "broccoli-test-helper": "^1.1.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "chai-files": "^1.4.0",
+    "co": "^4.6.0",
     "coveralls": "^2.11.10",
     "istanbul": "^0.4.2",
     "minimatch": "^3.0.2",
     "mocha": "^3.0.0",
     "mocha-jshint": "^2.3.1",
-    "rimraf": "^2.5.4",
     "sinon": "^1.15.3",
     "sinon-chai": "^2.8.0"
   }
