--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "broccoli-persistent-filter",
-  "version": "1.4.0",
+  "version": "v1.4.1",
   "description": "broccoli filter but with a persistent cache",
   "author": "Stefan Penner <stefan.penner@gmail.com>",
   "main": "index.js",
