inline md5-hex and convert it to ES5

--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "async-disk-cache": "^1.2.1",
     "async-promise-queue": "^1.0.2",
     "broccoli-plugin": "^1.0.0",
+    "crypto": "0.0.3",
     "fs-tree-diff": "^0.5.2",
     "hash-for-dep": "^1.0.2",
     "heimdalljs": "^0.2.1",
     "heimdalljs-logger": "^0.1.7",
-    "md5-hex": "^2.0.0",
     "mkdirp": "^0.5.1",
     "promise-map-series": "^0.2.1",
     "rimraf": "^2.6.1",
