--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test:debug": "mocha debug",
     "test:debug:brk": "mocha --debug-brk",
     "test:watch": "mocha --watch",
-    "test:coverage": "istanbul cover --config=test/istanbul.yml _mocha"
+    "test:coverage": "istanbul cover --config=test/istanbul.yml _mocha",
+    "test:ci": "mocha --compilers js:babel-register --require babel-polyfill"
   },
   "license": "MIT",
   "repository": {
@@ -48,10 +49,13 @@
     "walk-sync": "^0.3.1"
   },
   "devDependencies": {
-    "broccoli-test-helpers": "^0.0.9",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.24.1",
     "broccoli-test-helper": "^1.1.0",
+    "broccoli-test-helpers": "^0.0.9",
     "chai": "^3.5.0",
-    "chai-as-promised": "^7.0.0",
+    "chai-as-promised": "^5.3.0",
     "chai-files": "^1.4.0",
     "co": "^4.6.0",
     "coveralls": "^2.11.10",
