--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "test:debug": "mocha debug",
     "test:debug:brk": "mocha --debug-brk",
     "test:watch": "mocha --watch",
-    "test:coverage": "istanbul cover --config=test/istanbul.yml _mocha",
-    "test:ci": "mocha --compilers js:babel-register --require babel-polyfill"
+    "test:coverage": "istanbul cover --config=test/istanbul.yml _mocha"
   },
   "license": "MIT",
   "repository": {
@@ -48,9 +47,6 @@
     "walk-sync": "^0.3.1"
   },
   "devDependencies": {
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-register": "^6.24.1",
     "broccoli-test-helper": "^1.1.0",
     "broccoli-test-helpers": "^0.0.9",
     "chai": "^4.1.2",
