--- a/package.json
+++ b/package.json
@@ -60,5 +60,9 @@
     "mocha-jshint": "^2.3.1",
     "sinon": "^5.0.10",
     "sinon-chai": "^3.1.0"
+  },
+
+  "engines": {
+    "node": "6.* || >= 8.*"
   }
 }
