--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "rimraf": "^2.6.1",
     "rsvp": "^4.7.0",
     "symlink-or-copy": "^1.0.1",
+    "sync-disk-cache": "^1.3.3",
     "walk-sync": "^1.0.0"
   },
   "devDependencies": {
