--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "dependencies": {
     "async-disk-cache": "^2.0.0",
     "async-promise-queue": "^1.0.3",
-    "broccoli-plugin": "^3.0.1",
+    "broccoli-plugin": "^4.0.0",
     "fs-tree-diff": "^2.0.0",
     "hash-for-dep": "^1.5.0",
     "heimdalljs": "^0.2.1",
@@ -43,8 +43,8 @@
     "promise-map-series": "^0.2.1",
     "rimraf": "^3.0.0",
     "symlink-or-copy": "^1.0.1",
-    "sync-disk-cache": "^2.0.0",
-    "walk-sync": "^2.0.2"
+    "sync-disk-cache": "^1.3.3",
+    "fs-merger": "^3.0.1"
   },
   "devDependencies": {
     "broccoli-test-helper": "^2.0.0",
