Port to typescript.

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,14 @@ build/Release
 node_modules
 
 test/fixtures/tmp
+# typescript output
+*.tsbuildinfo
+*.js
+*.js.map
+*.d.ts
+!types/*
+!types/*/*
+!test/*
+!test/*/*
+!type-tests/index.d.ts
+
