Don't enable typescript config options that consumers might not want to enable.
*  esModuleInterop
*  allowSyntheticDefaultImports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,7 @@
     "sourceMap": true,
     "strict": true,
     "target": "es2018",
-    "types": ["node"],
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "types": ["node"]
   },
   "include": ["index.ts", "lib/**/*.ts"]
 }
