--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "paths": {
       "*": ["types/*"]
     },
+    "declarationMap": true,
     "sourceMap": true,
     "strict": true,
     "target": "es2018",
