Updates to dependency tracking to work with the fs-merger. (#191)
* Using input/output facade

* Passing custom fs to dependencies so that we can use fs facade.
* Removing ts-ignores
* deserialize must be provided with customFS

* Port to typescript.

* Add better type tests.

* Standardize on single quote.

* Use the fs-merger facade in dependency tracking.

* Standardize on single quote.

* Don't enable typescript config options that consumers might not want to enable.

*  esModuleInterop
*  allowSyntheticDefaultImports

* Update dependencies.ts

* Update type-tests/test.ts

Co-Authored-By: Chris Eppstein <chris@eppsteins.net>

* This should have been a dev dependency.

* Remove remaining @type annotations.

* Output definition sourcemaps, keep original sources in npm package.

* Bump broccoli-plugin version to pick up fs-merger release.

Co-authored-by: sparshithNR <nairbali@usc.edu>
Co-authored-by: Stefan Penner <stefan.penner@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,15 @@ build/Release
 node_modules
 
 test/fixtures/tmp
+# typescript output
+*.tsbuildinfo
+*.js
+*.js.map
+*.d.ts
+*.d.ts.map
+!types/*
+!types/*/*
+!test/*
+!test/*/*
+!type-tests/index.d.ts
+
