--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu, windows]
+        os: [ubuntu]
         node-version: ['10.x', '12.x']
 
     steps:
